[tool.poetry]
name = "peeringdb_server"
version = "2.27.1"
description = "source code for PeeringDB.com"
readme = "README.md"
repository = "https://github.com/peeringdb/peeringdb"
authors = [ "PeeringDB <support@peeringdb.com>",]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"
# core requirements
django = ">=3.2, <4"
django-inet = "^1.0"
django-handleref = "^1.1.0"
django-peeringdb = "==2.16"
djangorestframework = ">=3.12,<3.13"
mysqlclient = ">=1.3.9"
peeringdb = ">=1.1.0, <2"
uwsgi = ">=2.0.14"
# ancilary packages
bleach = ">=2.1.3"
django-allauth = ">=0.32.0"
django-simple-captcha = ">=0.5.11"
django-autocomplete-light = ">=3.2.9"
django-bootstrap5 = "^21.3"
django-cors-middleware = ">=1.3.1"
django-cors-headers = ">=2.1.0"
django-countries = ">=4.6.1"
django-crispy-forms = ">=1.6.1"
django-csp = "^3.7"
django-debug-toolbar = ">=1.9.1"
django-extensions = ">=1.3.3"
django-grappelli = ">=2.10.1"
django-import-export = ">2.8.0,<3"
django-hashers-passlib = ">=0.3"
# FIXME: django-oauth-toolkit needs to be locked to 1.6.1 because it introduced
# api breaking changes that were then reverted in 1.6.2 - in order to upgrade
# we need to wait for them to re-introduce the changes or adapt our code to
# the reversion
django-oauth-toolkit = "==1.6.1"
django-phonenumber-field = ">=0.6"
# FIXME: django-ratelimit 4.0 changes package namespace and introduces changes
# to default ratelimiting behaviour
django-ratelimit = ">=3, <4"
django-rest-swagger = ">=2.1.2"

# FIXME: djangorestframework-api-key 2.2.0 breaks migrations
djangorestframework-api-key = "==2.1.0"

django-tables2 = ">=1.0.4"
django-vanilla-views = ">=1.0.2"
django-security-keys = "^1.0.1"
googlemaps = ">=2.5.1"
markdown = ">=2.6.7"
passlib = ">=1.7.1"
phonenumbers = ">=8.11.1"
rdap = "==1.3.1"
unidecode = ">=1.0.23"
# these should just be pulled in automatically?
django-reversion = ">=4, <5"
certifi = ">=2017.11.5"
tld = ">=0.7.6"
# deprecated from drf -- used by rest swagger
coreapi = ">=2.3.1"
# FIXME: 1.15.0 has migration issues and also breaks
# emailing of one time password
django-two-factor-auth = ">=1.11,<1.15.0"
grainy = ">=1.7,<2"
django-grainy = ">=1.9.1,<2"
django-haystack = "<4"
whoosh = "<3"
django-structlog = ">=2.2.0"


[tool.poetry.dev-dependencies]
# testing
pytest = ">=6"
pytest-cov = "*"
pytest-django = ">=2.9.1"
pytest-filedata = ">=0.1.0"
pytest-mock = ">=3.3.1"
jsonschema = ">=2.6.0"
# selenium testing
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"

# linting
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
pymdgen = "^1.0.0"
mkdocs = "^1.1.2"
markdown-include = ">=0.5,<1"
pydot = "^1.4.2"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
