[tool.poetry]
name = "peeringdb_server"
version = "2.49.0-beta"
description = "source code for PeeringDB.com"
readme = "README.md"
repository = "https://github.com/peeringdb/peeringdb"
authors = [ "PeeringDB <support@peeringdb.com>",]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"
# core requirements
django = "^4.2"
django-inet = ">=1.1.1"
django-handleref = ">=2"
# Install from pypi once 3.1.0 is released
django-peeringdb = "==3.1.0"
djangorestframework = ">=3.14.0"
mysqlclient = ">=2.1.1"
# locked to support_202306 branch until that is tagged and released to pypi
peeringdb = { git = "https://github.com/peeringdb/peeringdb-py.git", branch = "support_202306" }
uwsgi = ">=2.0.14"
# ancilary packages
bleach = ">=2.1.3"
django-allauth = ">=0.54.0"
django-simple-captcha = ">=0.5.17"
django-autocomplete-light = ">=3.9.4"
django-bootstrap5 = "^23.1"
django-cors-headers = ">=3.14.0"
django-countries = ">=7.5.1"
django-crispy-forms = ">=2.0"
django-csp = "^3.7"
django-debug-toolbar = ">=4.0.0"
django-extensions = ">=1.3.3"
django-grappelli = ">=2.10.1"
django-import-export = ">2.8.0,<3"
django-hashers-passlib = { git = "https://github.com/mathiasertl/django-hashers-passlib.git" }
django-oauth-toolkit = ">=2"
django-phonenumber-field = ">=0.6"
django-ratelimit = ">=4.0.0"
django-rest-swagger = ">=2.1.2"
djangorestframework-api-key = ">=2.3.0"

django-tables2 = ">=1.0.4"
django-vanilla-views = ">=1.0.2"
django-security-keys = "^1.0.1"
googlemaps = ">=2.5.1"
markdown = ">=2.6.7"
passlib = ">=1.7.1"
phonenumbers = ">=8.11.1"
schema = ">=0.7.5"
rdap = "==1.3.1"
unidecode = ">=1.0.23"
# these should just be pulled in automatically?
django-reversion = ">=4, <5"
certifi = ">=2017.11.5"
tld = ">=0.7.6"
# deprecated from drf -- used by rest swagger
coreapi = ">=2.3.1"
# FIXME: 1.15.0 has migration issues and also breaks
# emailing of one time password
django-two-factor-auth = ">=1.11,<1.15.0"
grainy = ">=1.7,<2"
django-grainy = ">=2"
django-haystack = "<4"
whoosh = "<3"
django-structlog = ">=2.2.0"
django-elasticsearch-dsl = ">=7.3"
geopy = ">=2.3.0"

[tool.poetry.group.dev.dependencies]
# testing
pytest = ">=6"
pytest-cov = "*"
pytest-django = ">=2.9.1"
pytest-filedata = ">=0.1.0"
pytest-mock = ">=3.3.1"
jsonschema = ">=2.6.0"
# selenium testing
selenium = "^4.4.3"
webdriver-manager = "^3.8.3"

# linting
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
pymdgen = ">=1"
mkdocs = ">=1.1.2"
markdown-include = ">=0.5,<1"
pydot = ">=1.4.2"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
